# MutualCameraLocalization

./: README.md  package.xml
clientCube/: CMakeLists.txt  calibration.ini
clientCube/src/: Client.cpp  Client.h  Socket.cpp  Socket.h  main.cpp
clientCube/src/proto/: command.pb.h  img.pb.cc
client_cube/: CMakeLists.txt
client_cube/proto/: command.proto  img.proto  img.proto~
client_cube/src/: Client.cpp  Client.h  main.cpp
client_cube/src/proto/: img.pb.h
imgServer/: FlyCamServer
imgServer/lib/: libprotobuf-lite.la  libprotobuf-lite.so.8  libprotobuf.la  libprotoc.la
imgServer/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
imgServer/src/: Camera.cpp  Camera.h  LedsFinder.cpp  LedsFinder.h  Makefile  Socket.cpp  Socket.h  main.cpp
imgServer/src/proto/: command.pb.h  img.pb.h
mutualCameraLocalization/: CMakeLists.txt  package.xml
mutualCameraLocalization/cfg/: MutualCameraLocalization.cfg
mutualCameraLocalization/include/mutualCameraLocalization/: led_detector.h  monocular_pose_estimator_node.h  mutual_camera_localization_node.h  visualization.h
mutualCameraLocalization/include/mutual_camera_localization/: led_detector.h  mutual_camera_localization_node.h
mutualCameraLocalization/launch/: default.launch  test.launch
mutualCameraLocalization/src/: led_detector.cpp  monocular_pose_estimator_node.cpp  mutual_camera_localization_node.cpp  visualization.cpp
sick_pos/include/sick_pose/: sick_pose_node.h
sick_pos/src/: sick_pose_node.cpp
src/: Client.cpp  send_image.cpp
src/proto/: command.pb.cc
tcpPoseStream/src/: Client.cpp
